versions/v4.1.0/doxygen/html/globals_eval.md
---
version: v4.1.0
source_url: https://docs.zephyrproject.org/4.1.0/doxygen/html/globals_eval.html
original_path: doxygen/html/globals_eval.html
---

| Logo | Zephyr API Documentation 4.1.0  A Scalable Open Source RTOS |
| --- | --- |

Loading...

Searching...

No Matches

Here is a list of all enum values with links to the files they belong to:

### - a -

- ACPI\_RES\_TYPE\_IO : [acpi.h](acpi_2acpi_8h.md#a225bfac5f9770bd826ae98d2bbbbfc5badde21e335fe3363fd60eb3076dfe7a9f)
- ACPI\_RES\_TYPE\_MEM : [acpi.h](acpi_2acpi_8h.md#a225bfac5f9770bd826ae98d2bbbbfc5ba609d72a263b7ed46da533aeab6255626)
- ACPI\_RES\_TYPE\_UNKNOWN : [acpi.h](acpi_2acpi_8h.md#a225bfac5f9770bd826ae98d2bbbbfc5bad9f5eaef7ee5ef391c917786a358278b)
- ADC\_ACTION\_CONTINUE : [adc.h](group__adc__interface.md#gga8f6df993405679f852ae4cd8c63c6917ac875a64d997cb883b49447006554ba92)
- ADC\_ACTION\_FINISH : [adc.h](group__adc__interface.md#gga8f6df993405679f852ae4cd8c63c6917a68a21759522a3d584417fa12359b4dc9)
- ADC\_ACTION\_REPEAT : [adc.h](group__adc__interface.md#gga8f6df993405679f852ae4cd8c63c6917a8efc10c77ea616d568f88d3ef88b1715)
- ADC\_CMP\_NPCX\_GREATER : [adc\_cmp\_npcx.h](adc__cmp__npcx_8h.md#a803a31c01dab5a6417a38f2863d63cd8ab7687952bf7767dabd362415527291ec)
- ADC\_CMP\_NPCX\_LESS\_OR\_EQUAL : [adc\_cmp\_npcx.h](adc__cmp__npcx_8h.md#a803a31c01dab5a6417a38f2863d63cd8ad82416068bf2542ecbab7eda11c3305a)
- ADC\_CMP\_NPCX\_THRCTL1 : [adc\_cmp\_npcx.h](adc__cmp__npcx_8h.md#ab327195533e735ea950e56aca63b0a7ba3b32fe6061c4f4665a3f3dd4dc6b4149)
- ADC\_CMP\_NPCX\_THRCTL2 : [adc\_cmp\_npcx.h](adc__cmp__npcx_8h.md#ab327195533e735ea950e56aca63b0a7ba28c3ea89d01af5cbfadf01631ba80e22)
- ADC\_CMP\_NPCX\_THRCTL3 : [adc\_cmp\_npcx.h](adc__cmp__npcx_8h.md#ab327195533e735ea950e56aca63b0a7ba6e1d82b3799b3935ea08cb1f89fb43d9)
- ADC\_CMP\_NPCX\_THRCTL4 : [adc\_cmp\_npcx.h](adc__cmp__npcx_8h.md#ab327195533e735ea950e56aca63b0a7bad82720ff653bdd33c357da0c4800ff77)
- ADC\_CMP\_NPCX\_THRCTL5 : [adc\_cmp\_npcx.h](adc__cmp__npcx_8h.md#ab327195533e735ea950e56aca63b0a7bac1e7062cf13413c88f988a0d8035e7c0)
- ADC\_CMP\_NPCX\_THRCTL6 : [adc\_cmp\_npcx.h](adc__cmp__npcx_8h.md#ab327195533e735ea950e56aca63b0a7ba757400fdc6537af47fa7f5fb0de4c98f)
- ADC\_CMP\_NPCX\_THRCTL\_COUNT : [adc\_cmp\_npcx.h](adc__cmp__npcx_8h.md#ab327195533e735ea950e56aca63b0a7ba645e1aa2db79ebd6f4cbcb8d7ba3ec18)
- ADC\_GAIN\_1 : [adc.h](group__adc__interface.md#gga306f882323c66b263d3797124ca5f3a0a76b3097b0b38d33266d36f5a5d534e54)
- ADC\_GAIN\_12 : [adc.h](group__adc__interface.md#gga306f882323c66b263d3797124ca5f3a0a3ff31845095f2b0fe7e62b2b826411e8)
- ADC\_GAIN\_128 : [adc.h](group__adc__interface.md#gga306f882323c66b263d3797124ca5f3a0a1b3c6d80db15acf962192341d4754829)
- ADC\_GAIN\_16 : [adc.h](group__adc__interface.md#gga306f882323c66b263d3797124ca5f3a0a4b18ba08d86e630f2deeeea5b329f970)
- ADC\_GAIN\_1\_2 : [adc.h](group__adc__interface.md#gga306f882323c66b263d3797124ca5f3a0a2d36559128c21834d1188aed43d236d2)
- ADC\_GAIN\_1\_3 : [adc.h](group__adc__interface.md#gga306f882323c66b263d3797124ca5f3a0af896fe01119930815ac78a4ee87635ee)
- ADC\_GAIN\_1\_4 : [adc.h](group__adc__interface.md#gga306f882323c66b263d3797124ca5f3a0afa55c5a94bfebb9a70638e9ab32eabf8)
- ADC\_GAIN\_1\_5 : [adc.h](group__adc__interface.md#gga306f882323c66b263d3797124ca5f3a0a198c40369bddfc3c0eaa8ae3bb1be0c9)
- ADC\_GAIN\_1\_6 : [adc.h](group__adc__interface.md#gga306f882323c66b263d3797124ca5f3a0abb26700162bfc68a2beadc1e78b758c1)
- ADC\_GAIN\_2 : [adc.h](group__adc__interface.md#gga306f882323c66b263d3797124ca5f3a0aff4b7cc577e333a3a684e4e56b124868)
- ADC\_GAIN\_24 : [adc.h](group__adc__interface.md#gga306f882323c66b263d3797124ca5f3a0a5d19226b1d1728180101e65b8386ff33)
- ADC\_GAIN\_2\_3 : [adc.h](group__adc__interface.md#gga306f882323c66b263d3797124ca5f3a0ac720b0730cfef7c55f97777fec75dc62)
- ADC\_GAIN\_2\_5 : [adc.h](group__adc__interface.md#gga306f882323c66b263d3797124ca5f3a0a4a59d3dd1e2e2fbe2ec593291ca307e0)
- ADC\_GAIN\_2\_7 : [adc.h](group__adc__interface.md#gga306f882323c66b263d3797124ca5f3a0a30cf06d8c6d323a8bfef3a508f2c3388)
- ADC\_GAIN\_3 : [adc.h](group__adc__interface.md#gga306f882323c66b263d3797124ca5f3a0a113a3324782a4517bb71fc3b03aeef5e)
- ADC\_GAIN\_32 : [adc.h](group__adc__interface.md#gga306f882323c66b263d3797124ca5f3a0ac693403ea0f70f5723a98fe11967c13f)
- ADC\_GAIN\_4 : [adc.h](group__adc__interface.md#gga306f882323c66b263d3797124ca5f3a0a12756ff0f6a345ff3fee2077e1153300)
- ADC\_GAIN\_4\_5 : [adc.h](group__adc__interface.md#gga306f882323c66b263d3797124ca5f3a0ad0ee4a6bfc749a3213f0c44d30e8e6df)
- ADC\_GAIN\_6 : [adc.h](group__adc__interface.md#gga306f882323c66b263d3797124ca5f3a0aba255a08f5ff25388778057d725a77c8)
- ADC\_GAIN\_64 : [adc.h](group__adc__interface.md#gga306f882323c66b263d3797124ca5f3a0a064c567978a50dd58d48d481388dd6eb)
- ADC\_GAIN\_8 : [adc.h](group__adc__interface.md#gga306f882323c66b263d3797124ca5f3a0ae9a429f8b69dd0e5cae0e1ab7dbe7dc3)
- ADC\_NPCX\_THRESHOLD\_PARAM\_CHNSEL : [adc\_npcx\_threshold.h](adc__npcx__threshold_8h.md#a7da5b595bef1edfb12ad8223fb7fc461ab00b9cf39929edf5221af6bf147fb79b)
- ADC\_NPCX\_THRESHOLD\_PARAM\_L\_H : [adc\_npcx\_threshold.h](adc__npcx__threshold_8h.md#a7da5b595bef1edfb12ad8223fb7fc461ad5183bef3339ba7ee07f32c34e7d7713)
- ADC\_NPCX\_THRESHOLD\_PARAM\_L\_H\_HIGHER : [adc\_npcx\_threshold.h](adc__npcx__threshold_8h.md#a38f7d862a13c7894b71ff6750ab56eeca7f0b6e9c183da7426bee511d71622ce6)
- ADC\_NPCX\_THRESHOLD\_PARAM\_L\_H\_LOWER : [adc\_npcx\_threshold.h](adc__npcx__threshold_8h.md#a38f7d862a13c7894b71ff6750ab56eeca66fe94a1fc6250b615a49bc282ec31b2)
- ADC\_NPCX\_THRESHOLD\_PARAM\_MAX : [adc\_npcx\_threshold.h](adc__npcx__threshold_8h.md#a7da5b595bef1edfb12ad8223fb7fc461a61da0191e7147c0634a954ba543f1004)
- ADC\_NPCX\_THRESHOLD\_PARAM\_THVAL : [adc\_npcx\_threshold.h](adc__npcx__threshold_8h.md#a7da5b595bef1edfb12ad8223fb7fc461ae260faa6cb77b1466898a47de1cc35eb)
- ADC\_NPCX\_THRESHOLD\_PARAM\_WORK : [adc\_npcx\_threshold.h](adc__npcx__threshold_8h.md#a7da5b595bef1edfb12ad8223fb7fc461a20f6e3a525932decdedae74b73ce62b3)
- ADC\_REF\_EXTERNAL0 : [adc.h](group__adc__interface.md#gga91b0f997d73739cf9f7349b7581e1f56afc15362bdf426f412e150ae9f8d224e6)
- ADC\_REF\_EXTERNAL1 : [adc.h](group__adc__interface.md#gga91b0f997d73739cf9f7349b7581e1f56a2733819da753b01a8116d076498fe52a)
- ADC\_REF\_INTERNAL : [adc.h](group__adc__interface.md#gga91b0f997d73739cf9f7349b7581e1f56a239921743b35d32a558a43deee2ce709)
- ADC\_REF\_VDD\_1 : [adc.h](group__adc__interface.md#gga91b0f997d73739cf9f7349b7581e1f56ae41651d9d2ba0d3c2a976177fc6ed1b3)
- ADC\_REF\_VDD\_1\_2 : [adc.h](group__adc__interface.md#gga91b0f997d73739cf9f7349b7581e1f56a5f47fb0b239da79577887baf2576eb0d)
- ADC\_REF\_VDD\_1\_3 : [adc.h](group__adc__interface.md#gga91b0f997d73739cf9f7349b7581e1f56a8e5dfe37c3993e118d6e316c9fa0aad1)
- ADC\_REF\_VDD\_1\_4 : [adc.h](group__adc__interface.md#gga91b0f997d73739cf9f7349b7581e1f56a93d4dc4332b3346a7332383ecf745d2c)
- address\_trans\_region\_size\_1 : [rat.h](rat_8h.md#add39d351d9d3b5e5e0b1ed6a7dd0881ea8f58d582cd0c756345d5006804405df3)
- address\_trans\_region\_size\_128 : [rat.h](rat_8h.md#add39d351d9d3b5e5e0b1ed6a7dd0881ea4b17e36f5f39f920c78e684df121abef)
- address\_trans\_region\_size\_128K : [rat.h](rat_8h.md#add39d351d9d3b5e5e0b1ed6a7dd0881ea8950584e532d0e7d5dfe84d9df9df555)
- address\_trans\_region\_size\_128M : [rat.h](rat_8h.md#add39d351d9d3b5e5e0b1ed6a7dd0881eaa1fb7f23f29fa23f03435cecdcce95c2)
- address\_trans\_region\_size\_16 : [rat.h](rat_8h.md#add39d351d9d3b5e5e0b1ed6a7dd0881ea5700badf7a90fb967dd354ac0fc11164)
- address\_trans\_region\_size\_16K : [rat.h](rat_8h.md#add39d351d9d3b5e5e0b1ed6a7dd0881ea072693f3fe262f442ff8036fe9d762d8)
- address\_trans\_region\_size\_16M : [rat.h](rat_8h.md#add39d351d9d3b5e5e0b1ed6a7dd0881eadcdcbcc90bfdd2f718bacf063d5efbf1)
- address\_trans\_region\_size\_1G : [rat.h](rat_8h.md#add39d351d9d3b5e5e0b1ed6a7dd0881eab293b5d29ef308e02c7920235c7f848c)
- address\_trans\_region\_size\_1K : [rat.h](rat_8h.md#add39d351d9d3b5e5e0b1ed6a7dd0881ea040a8134c953aecc21244a345df155df)
- address\_trans\_region\_size\_1M : [rat.h](rat_8h.md#add39d351d9d3b5e5e0b1ed6a7dd0881ea051f8ca6c90e483782a79baa69c24d5a)
- address\_trans\_region\_size\_2 : [rat.h](rat_8h.md#add39d351d9d3b5e5e0b1ed6a7dd0881ea04dbfa2d52dfefb293092f9e11a23113)
- address\_trans\_region\_size\_256 : [rat.h](rat_8h.md#add39d351d9d3b5e5e0b1ed6a7dd0881eaf97a04aae5b62d1bf686dadf7fe5323b)
- address\_trans\_region\_size\_256K : [rat.h](rat_8h.md#add39d351d9d3b5e5e0b1ed6a7dd0881ea564588b427d38b1137e73a47748f2c8a)
- address\_trans\_region\_size\_256M : [rat.h](rat_8h.md#add39d351d9d3b5e5e0b1ed6a7dd0881ea11b12b2dc0d87f01571a85e4d4d2b925)
- address\_trans\_region\_size\_2G : [rat.h](rat_8h.md#add39d351d9d3b5e5e0b1ed6a7dd0881ead7490f34d6aa5b45f1704ce985645fc1)
- address\_trans\_region\_size\_2K : [rat.h](rat_8h.md#add39d351d9d3b5e5e0b1ed6a7dd0881eae6615e1cd2c34edb18b09d84cd8f2d63)
- address\_trans\_region\_size\_2M : [rat.h](rat_8h.md#add39d351d9d3b5e5e0b1ed6a7dd0881ea5807a3fe19aba5a9ecfe472200a3fe79)
- address\_trans\_region\_size\_32 : [rat.h](rat_8h.md#add39d351d9d3b5e5e0b1ed6a7dd0881ea175247673aabe51988328e3baf4d7f2c)
- address\_trans\_region\_size\_32K : [rat.h](rat_8h.md#add39d351d9d3b5e5e0b1ed6a7dd0881eadd5defe08d296c7236eb9651a79b82a4)
- address\_trans\_region\_size\_32M : [rat.h](rat_8h.md#add39d351d9d3b5e5e0b1ed6a7dd0881ea7b851d6026a73d2ed29ae928a858a054)
- address\_trans\_region\_size\_4 : [rat.h](rat_8h.md#add39d351d9d3b5e5e0b1ed6a7dd0881ead08d9d6124c8069651e7fa624fa9271a)
- address\_trans\_region\_size\_4G : [rat.h](rat_8h.md#add39d351d9d3b5e5e0b1ed6a7dd0881ea1b125b2f8bab78b4d2a504cebed559c2)
- address\_trans\_region\_size\_4K : [rat.h](rat_8h.md#add39d351d9d3b5e5e0b1ed6a7dd0881ea83dd8600901fe070cab760e1b16c9252)
- address\_trans\_region\_size\_4M : [rat.h](rat_8h.md#add39d351d9d3b5e5e0b1ed6a7dd0881ea602aefd08974ed3b66687205f32cc2af)
- address\_trans\_region\_size\_512 : [rat.h](rat_8h.md#add39d351d9d3b5e5e0b1ed6a7dd0881ea32eb15028196cf30411c597e8815e3f0)
- address\_trans\_region\_size\_512K : [rat.h](rat_8h.md#add39d351d9d3b5e5e0b1ed6a7dd0881eac4940c1e11068d9c74878b209a09acaa)
- address\_trans\_region\_size\_512M : [rat.h](rat_8h.md#add39d351d9d3b5e5e0b1ed6a7dd0881ea279d93a8260daf631aa0199469af0b53)
- address\_trans\_region\_size\_64 : [rat.h](rat_8h.md#add39d351d9d3b5e5e0b1ed6a7dd0881ea8f7389ecd49b7263e9c33613b32ff6a5)
- address\_trans\_region\_size\_64K : [rat.h](rat_8h.md#add39d351d9d3b5e5e0b1ed6a7dd0881eac866cbba7ad7848f22a6b023e983188f)
- address\_trans\_region\_size\_64M : [rat.h](rat_8h.md#add39d351d9d3b5e5e0b1ed6a7dd0881eabb0fb07483fd4c7da7a7a93484aebb55)
- address\_trans\_region\_size\_8 : [rat.h](rat_8h.md#add39d351d9d3b5e5e0b1ed6a7dd0881ead2486648f0256c8fafffc92d8d9008ae)
- address\_trans\_region\_size\_8K : [rat.h](rat_8h.md#add39d351d9d3b5e5e0b1ed6a7dd0881ea1a5c0ad9be70669316c2f3b0bf5f2b12)
- address\_trans\_region\_size\_8M : [rat.h](rat_8h.md#add39d351d9d3b5e5e0b1ed6a7dd0881ea81426462fbe9681a39a6e3d172ab6f22)
- ADLTC2990\_REPEATED\_ACQUISITION : [adltc2990.h](adltc2990_8h.md#a2bb0bc14920f8645b371c194148e8d21a1dd5299deae992e0aa45231873180415)
- ADLTC2990\_SINGLE\_SHOT\_ACQUISITION : [adltc2990.h](adltc2990_8h.md#a2bb0bc14920f8645b371c194148e8d21a24e4c7d8197707dbae839f08ff1fc870)
- ADS131M02\_CONTINUOUS\_MODE : [ads131m02.h](ads131m02_8h.md#ad760dc7a7036158af94ced3d9e8c6723ac536b7369f6a00a2405a267439dbab29)
- ADS131M02\_GC\_DELAY\_1024 : [ads131m02.h](ads131m02_8h.md#a06f6638f3ba51cbd7ef9028d83cb0d7daaf8f4e7ed69bd5332efe1acb59e876cf)
- ADS131M02\_GC\_DELAY\_128 : [ads131m02.h](ads131m02_8h.md#a06f6638f3ba51cbd7ef9028d83cb0d7daaac93eddc8896d914a48463bb0cf277d)
- ADS131M02\_GC\_DELAY\_16 : [ads131m02.h](ads131m02_8h.md#a06f6638f3ba51cbd7ef9028d83cb0d7dacae711ef11e3e2668dd9b64343185ab5)
- ADS131M02\_GC\_DELAY\_16384 : [ads131m02.h](ads131m02_8h.md#a06f6638f3ba51cbd7ef9028d83cb0d7dabe33c4d4fe7bfd00d9d8d8669a085479)
- ADS131M02\_GC\_DELAY\_2 : [ads131m02.h](ads131m02_8h.md#a06f6638f3ba51cbd7ef9028d83cb0d7daccd3c64901e9aaa30a4461e5044de21a)
- ADS131M02\_GC\_DELAY\_2048 : [ads131m02.h](ads131m02_8h.md#a06f6638f3ba51cbd7ef9028d83cb0d7daeb87ba8a9ac1eb5aa12fa2d8907263a1)
- ADS131M02\_GC\_DELAY\_256 : [ads131m02.h](ads131m02_8h.md#a06f6638f3ba51cbd7ef9028d83cb0d7da2c4baf74c237423ac584a943fc28c4ff)
- ADS131M02\_GC\_DELAY\_32 : [ads131m02.h](ads131m02_8h.md#a06f6638f3ba51cbd7ef9028d83cb0d7dab18deb65a7e28c5e9827678dc3e13862)
- ADS131M02\_GC\_DELAY\_32768 : [ads131m02.h](ads131m02_8h.md#a06f6638f3ba51cbd7ef9028d83cb0d7dafcd84e5cea9262ff99056fe74fa2b62e)
- ADS131M02\_GC\_DELAY\_4 : [ads131m02.h](ads131m02_8h.md#a06f6638f3ba51cbd7ef9028d83cb0d7da6cfa9898f4d8803890f715548785796c)
- ADS131M02\_GC\_DELAY\_4096 : [ads131m02.h](ads131m02_8h.md#a06f6638f3ba51cbd7ef9028d83cb0d7dab56b732017be8afa576a5fa517fd04fb)
- ADS131M02\_GC\_DELAY\_512 : [ads131m02.h](ads131m02_8h.md#a06f6638f3ba51cbd7ef9028d83cb0d7da0e7959cebba38878924af4e6e0ec1218)
- ADS131M02\_GC\_DELAY\_64 : [ads131m02.h](ads131m02_8h.md#a06f6638f3ba51cbd7ef9028d83cb0d7da91a6015efb301c998df3ceb631d89fc6)
- ADS131M02\_GC\_DELAY\_65536 : [ads131m02.h](ads131m02_8h.md#a06f6638f3ba51cbd7ef9028d83cb0d7da6a006e3a0b8c146d9adb74fd0ba713c0)
- ADS131M02\_GC\_DELAY\_8 : [ads131m02.h](ads131m02_8h.md#a06f6638f3ba51cbd7ef9028d83cb0d7daeb9ee92fc3d77e41754f822fe4ec0cb6)
- ADS131M02\_GC\_DELAY\_8192 : [ads131m02.h](ads131m02_8h.md#a06f6638f3ba51cbd7ef9028d83cb0d7da191c6f08a6ad4bbd4f57ae1b25dbc143)
- ADS131M02\_GLOBAL\_CHOP\_MODE : [ads131m02.h](ads131m02_8h.md#ad760dc7a7036158af94ced3d9e8c6723aefc260abb9c9ce184fbb7216e6e45de2)
- ADS131M02\_HR : [ads131m02.h](ads131m02_8h.md#adce793d507c5962362d9bd85818a886ca2146287eb5fbda0079c280bc1a9f6a36)
- ADS131M02\_LP : [ads131m02.h](ads131m02_8h.md#adce793d507c5962362d9bd85818a886ca687e531cdc9b9f08fdaf6c47f9450c82)
- ADS131M02\_VLP : [ads131m02.h](ads131m02_8h.md#adce793d507c5962362d9bd85818a886ca5a881112e5b695ab55dfacb0b6879b2a)
- APP\_DETACH : [usbd\_dfu.h](usbd__dfu_8h.md#a9096f7fb11c9d84692bc677d8218d01ea1b6cb3fe0a26dce8a6fce9f179aa23ef)
- APP\_IDLE : [usbd\_dfu.h](usbd__dfu_8h.md#a9096f7fb11c9d84692bc677d8218d01eab7ba8c8ed2c179fec88a9b6aafc663f0)
- appDETACH : [usb\_dfu.h](usb__dfu_8h.md#a3f025bde53c777c5e0493ef54bbeb143a71f82402de0db9a8f3263f045f87bcc1)
- appIDLE : [usb\_dfu.h](usb__dfu_8h.md#a3f025bde53c777c5e0493ef54bbeb143aadb4993cd9183666f3ef9fd82a4519fa)
- ARCH\_PAGE\_LOCATION\_BAD : [kernel\_arch\_interface.h](group__arch-mmu.md#gga65e10c80055d7e695add000f2ccfbb0ba7ff70acdf02345b5fa4c42ed2b2adde9)
- ARCH\_PAGE\_LOCATION\_PAGED\_IN : [kernel\_arch\_interface.h](group__arch-mmu.md#gga65e10c80055d7e695add000f2ccfbb0bae378a008f497ae10ab50cab06f8c36db)
- ARCH\_PAGE\_LOCATION\_PAGED\_OUT : [kernel\_arch\_interface.h](group__arch-mmu.md#gga65e10c80055d7e695add000f2ccfbb0bacf9e624eac380ea2bfa37632c4d17a3a)
- AUDIO\_CHANNEL\_ALL : [codec.h](group__audio__codec__interface.md#gga966cf980ce24855830e24b5de4d884d6a16fbc4bf16306517d21264188f447878)
- AUDIO\_CHANNEL\_FRONT\_CENTER : [codec.h](group__audio__codec__interface.md#gga966cf980ce24855830e24b5de4d884d6a9fc77d8958944d029fc2f056774b1be8)
- AUDIO\_CHANNEL\_FRONT\_LEFT : [codec.h](group__audio__codec__interface.md#gga966cf980ce24855830e24b5de4d884d6a0419483310bfc5abe46a0c586070ed18)
- AUDIO\_CHANNEL\_FRONT\_RIGHT : [codec.h](group__audio__codec__interface.md#gga966cf980ce24855830e24b5de4d884d6a05525a25c5912eda05e9a8786a743a75)
- AUDIO\_CHANNEL\_HEADPHONE\_LEFT : [codec.h](group__audio__codec__interface.md#gga966cf980ce24855830e24b5de4d884d6affc38ea2d76af83e6b06a1471dd68cfa)
- AUDIO\_CHANNEL\_HEADPHONE\_RIGHT : [codec.h](group__audio__codec__interface.md#gga966cf980ce24855830e24b5de4d884d6a7b8d80478453df358cbdb7064f7a656d)
- AUDIO\_CHANNEL\_LFE : [codec.h](group__audio__codec__interface.md#gga966cf980ce24855830e24b5de4d884d6a6dfca2cc579d6619f87f38c90d0633e6)
- AUDIO\_CHANNEL\_REAR\_CENTER : [codec.h](group__audio__codec__interface.md#gga966cf980ce24855830e24b5de4d884d6af354197a57c321b4f966a33adf499b04)
- AUDIO\_CHANNEL\_REAR\_LEFT : [codec.h](group__audio__codec__interface.md#gga966cf980ce24855830e24b5de4d884d6a4ab25a6492626c6634c41b39cf9462bc)
- AUDIO\_CHANNEL\_REAR\_RIGHT : [codec.h](group__audio__codec__interface.md#gga966cf980ce24855830e24b5de4d884d6a370fed729325e3f3f79cc920f8fe37a9)
- AUDIO\_CHANNEL\_SIDE\_LEFT : [codec.h](group__audio__codec__interface.md#gga966cf980ce24855830e24b5de4d884d6ada91a4234b3d7b115768ba08f39482ba)
- AUDIO\_CHANNEL\_SIDE\_RIGHT : [codec.h](group__audio__codec__interface.md#gga966cf980ce24855830e24b5de4d884d6a7eac9f339583f2ce9f9a1a30c02555ec)
- AUDIO\_CODEC\_ERROR\_DC : [codec.h](group__audio__codec__interface.md#gga2923c9aca9b8656ba3e3741d5860279aab950af7e7fb02c49f5515389589c5e35)
- AUDIO\_CODEC\_ERROR\_OVERCURRENT : [codec.h](group__audio__codec__interface.md#gga2923c9aca9b8656ba3e3741d5860279aacf3fcfdf3c6d471c5e402214cb8dc1f1)
- AUDIO\_CODEC\_ERROR\_OVERTEMPERATURE : [codec.h](group__audio__codec__interface.md#gga2923c9aca9b8656ba3e3741d5860279aab3b16fdb6f4a0d46801593922de82e7f)
- AUDIO\_CODEC\_ERROR\_OVERVOLTAGE : [codec.h](group__audio__codec__interface.md#gga2923c9aca9b8656ba3e3741d5860279aa84b9f2c5a8a930e0ecab603513fef9f6)
- AUDIO\_CODEC\_ERROR\_UNDERVOLTAGE : [codec.h](group__audio__codec__interface.md#gga2923c9aca9b8656ba3e3741d5860279aa5fc4610a3cbc9588d02e0aaa7c8300ba)
- AUDIO\_DAI\_TYPE\_I2S : [codec.h](group__audio__codec__interface.md#gga147094be4c7c5d62df695673d293f12da13b981200501719efb95e15effacafac)
- AUDIO\_DAI\_TYPE\_INVALID : [codec.h](group__audio__codec__interface.md#gga147094be4c7c5d62df695673d293f12da7e794ea660c9953b621f56d14e25103c)
- AUDIO\_DAI\_TYPE\_LEFT\_JUSTIFIED : [codec.h](group__audio__codec__interface.md#gga147094be4c7c5d62df695673d293f12da3cac1ab007667ecc477f493cb74ca504)
- AUDIO\_DAI\_TYPE\_PCMA : [codec.h](group__audio__codec__interface.md#gga147094be4c7c5d62df695673d293f12da0376329aa4700f6b6aed798a13cb1efe)
- AUDIO\_DAI\_TYPE\_PCMB : [codec.h](group__audio__codec__interface.md#gga147094be4c7c5d62df695673d293f12daa578a69e94a460428e0d09f29cbf9ade)
- AUDIO\_DAI\_TYPE\_RIGHT\_JUSTIFIED : [codec.h](group__audio__codec__interface.md#gga147094be4c7c5d62df695673d293f12da94fdc805aec7c34da2de990d1b1bef6e)
- AUDIO\_PCM\_RATE\_11P025K : [codec.h](group__audio__codec__interface.md#gga8fd2079e6128c8a6da59c2dee58101caa534b2e8dfa910c18b0617c236fa18c4d)
- AUDIO\_PCM\_RATE\_16K : [codec.h](group__audio__codec__interface.md#gga8fd2079e6128c8a6da59c2dee58101caae86fe5a3fc91eb2a7d93aaec8fb1f2d3)
- AUDIO\_PCM\_RATE\_192K : [codec.h](group__audio__codec__interface.md#gga8fd2079e6128c8a6da59c2dee58101caa526109e4c13be490c6977b5ec56624e9)
- AUDIO\_PCM\_RATE\_22P05K : [codec.h](group__audio__codec__interface.md#gga8fd2079e6128c8a6da59c2dee58101caa77fab8d698408449f11d0974bfebaa0b)
- AUDIO\_PCM\_RATE\_24K : [codec.h](group__audio__codec__interface.md#gga8fd2079e6128c8a6da59c2dee58101caafaf9fdd89c698681685ee371ea834945)
- AUDIO\_PCM\_RATE\_32K : [codec.h](group__audio__codec__interface.md#gga8fd2079e6128c8a6da59c2dee58101caa29ebb75bd5be524a7e60470b20fdee90)
- AUDIO\_PCM\_RATE\_44P1K : [codec.h](group__audio__codec__interface.md#gga8fd2079e6128c8a6da59c2dee58101caae25d14c7f06f75b59407c1f881f1afad)
- AUDIO\_PCM\_RATE\_48K : [codec.h](group__audio__codec__interface.md#gga8fd2079e6128c8a6da59c2dee58101caad9d6a01be714fc4b72ef03266b7cc913)
- AUDIO\_PCM\_RATE\_8K : [codec.h](group__audio__codec__interface.md#gga8fd2079e6128c8a6da59c2dee58101caaaf78ccdda2de8de5e8978f5cc42318b8)
- AUDIO\_PCM\_RATE\_96K : [codec.h](group__audio__codec__interface.md#gga8fd2079e6128c8a6da59c2dee58101caae682830b296e838f90dcff0689ae1811)
- AUDIO\_PCM\_WIDTH\_16\_BITS : [codec.h](group__audio__codec__interface.md#gga1898dae0fac2e2bf34596453037bff7ea222459c644bc02cb5edb07628de4c78e)
- AUDIO\_PCM\_WIDTH\_20\_BITS : [codec.h](group__audio__codec__interface.md#gga1898dae0fac2e2bf34596453037bff7eae27896441250bb17791c1f7bb90d5638)
- AUDIO\_PCM\_WIDTH\_24\_BITS : [codec.h](group__audio__codec__interface.md#gga1898dae0fac2e2bf34596453037bff7eaf26a8f2a5e72586771f6e0fc84cf5daa)
- AUDIO\_PCM\_WIDTH\_32\_BITS : [codec.h](group__audio__codec__interface.md#gga1898dae0fac2e2bf34596453037bff7eab81e15d64e83e7e2371186fcd0e7fa0f)
- AUDIO\_PROPERTY\_INPUT\_MUTE : [codec.h](group__audio__codec__interface.md#gga5411b79fa217b0f9c63dc6890323804ca9b4548cfe663072a98db20ea0da377c1)
- AUDIO\_PROPERTY\_INPUT\_VOLUME : [codec.h](group__audio__codec__interface.md#gga5411b79fa217b0f9c63dc6890323804ca0608dca9fec8160429d17d1d7dac0026)
- AUDIO\_PROPERTY\_OUTPUT\_MUTE : [codec.h](group__audio__codec__interface.md#gga5411b79fa217b0f9c63dc6890323804cafc7d548769874638f28a782ea4b10bdb)
- AUDIO\_PROPERTY\_OUTPUT\_VOLUME : [codec.h](group__audio__codec__interface.md#gga5411b79fa217b0f9c63dc6890323804ca3a386a4b7bfe9ae97a9ffdd7740d73d8)
- AUDIO\_ROUTE\_BYPASS : [codec.h](group__audio__codec__interface.md#gga3b21ded95eb16d2c5f9f8da3c580a411a68af44d32f8c5e46a962fe0fc0fe0323)
- AUDIO\_ROUTE\_CAPTURE : [codec.h](group__audio__codec__interface.md#gga3b21ded95eb16d2c5f9f8da3c580a411a31ebeb6337049a1ccea29ede230ad28a)
- AUDIO\_ROUTE\_PLAYBACK : [codec.h](group__audio__codec__interface.md#gga3b21ded95eb16d2c5f9f8da3c580a411a726898c5bfe3cbb217e3bca2fd1cdf7e)
- AUDIO\_ROUTE\_PLAYBACK\_CAPTURE : [codec.h](group__audio__codec__interface.md#gga3b21ded95eb16d2c5f9f8da3c580a411aa105c5914186aa9fbbd81af4e754ff0d)
- AUXDISPLAY\_DIRECTION\_COUNT : [auxdisplay.h](group__auxdisplay__interface.md#gga5f95ac69e18091883e7121103014be10ad58b4bb90fac2daff787329f34046ca3)
- AUXDISPLAY\_DIRECTION\_LEFT : [auxdisplay.h](group__auxdisplay__interface.md#gga5f95ac69e18091883e7121103014be10a4744906285765c922f4016f31db9e352)
- AUXDISPLAY\_DIRECTION\_RIGHT : [auxdisplay.h](group__auxdisplay__interface.md#gga5f95ac69e18091883e7121103014be10afa02cc4de309a884fdc92e265cc2e599)
- AUXDISPLAY\_POSITION\_ABSOLUTE : [auxdisplay.h](group__auxdisplay__interface.md#gga98b0be37fc76df0ae4dec0bef6c94504a3157133a1038e919792e4824849b9404)
- AUXDISPLAY\_POSITION\_COUNT : [auxdisplay.h](group__auxdisplay__interface.md#gga98b0be37fc76df0ae4dec0bef6c94504a2c95b6af944fa7a83d6f3168ee4e5d23)
- AUXDISPLAY\_POSITION\_RELATIVE : [auxdisplay.h](group__auxdisplay__interface.md#gga98b0be37fc76df0ae4dec0bef6c94504a7783c940a94fb769f798e21f6ed3fa28)
- AUXDISPLAY\_POSITION\_RELATIVE\_DIRECTION : [auxdisplay.h](group__auxdisplay__interface.md#gga98b0be37fc76df0ae4dec0bef6c94504ae415e7b58e24cf78dab27a29c3c23558)
- AXP192\_GPIO\_FUNC\_ADC : [axp192.h](drivers_2mfd_2axp192_8h.md#ac92e5fa77591e02e49570d1a1c38e249ab3a2622cccb9ec1cdf22ddd5ac75ae6a)
- AXP192\_GPIO\_FUNC\_CHARGE\_CTL : [axp192.h](drivers_2mfd_2axp192_8h.md#ac92e5fa77591e02e49570d1a1c38e249a5955f43848da067d9134790f9fe1c240)
- AXP192\_GPIO\_FUNC\_FLOAT : [axp192.h](drivers_2mfd_2axp192_8h.md#ac92e5fa77591e02e49570d1a1c38e249a69c1f986672389305a3000b83a12417f)
- AXP192\_GPIO\_FUNC\_INPUT : [axp192.h](drivers_2mfd_2axp192_8h.md#ac92e5fa77591e02e49570d1a1c38e249ab8eee3f4b6ce22594b90d7e49e4927df)
- AXP192\_GPIO\_FUNC\_INVALID : [axp192.h](drivers_2mfd_2axp192_8h.md#ac92e5fa77591e02e49570d1a1c38e249ad16e246ca71f2e865cccf1b4ad2f9286)
- AXP192\_GPIO\_FUNC\_LDO : [axp192.h](drivers_2mfd_2axp192_8h.md#ac92e5fa77591e02e49570d1a1c38e249ae9f961ad84c38f3315e3cdb25ede9328)
- AXP192\_GPIO\_FUNC\_OUTPUT\_LOW : [axp192.h](drivers_2mfd_2axp192_8h.md#ac92e5fa77591e02e49570d1a1c38e249a8d006f1e4284057f5b952b236729c5f5)
- AXP192\_GPIO\_FUNC\_OUTPUT\_OD : [axp192.h](drivers_2mfd_2axp192_8h.md#ac92e5fa77591e02e49570d1a1c38e249af1c2244571c0a3b12c0ae94c583c1a4b)
- AXP192\_GPIO\_FUNC\_PWM : [axp192.h](drivers_2mfd_2axp192_8h.md#ac92e5fa77591e02e49570d1a1c38e249a2634f857f19e03ab8337780025c25579)

- Generated on  for Zephyr API Documentation by [![doxygen](https://docs.zephyrproject.org/4.1.0/doxygen/html/doxygen.svg)](https://www.doxygen.org/index.html) 1.16.1
